--- a/.github/workflows/render-and-publish.yml
+++ b/.github/workflows/render-and-publish.yml
@@ -15,7 +15,9 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install packages (needed for Rmd)
-        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "jsonlite", "revealjs", "knitr"))'
+        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "jsonlite", "revealjs", "knitr", "tidyverse", "plyr", "betareg", "lmtest", "glmmTMB", "boot", "emmeans", "brms", "mvtnorm", "nlme", "rstan", "VGAM", "car", "lme4", "Rmisc", "readr", "multcomp", "ggthemes", "multcompView"))'
+        
+
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
