--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,8 @@ website:
         text: Code in your files
       - href: content/acknowledgements.qmd
         text: Acknowledgements
+      - href: content/percent_cover.qmd
+        text: Percent Cover
       - href: content/dispersion_presentation.qmd
         text: Pocilloporid Dispersion
 
