commit and push, 1730, 2/12/2023

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,8 @@ website:
         text: Percent Cover
       - href: content/dispersion_presentation.qmd
         text: Pocilloporid Dispersion
+      - href: content/coral_size.qmd
+        text: Colony Size
 
 format:
   html:
