--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,6 +51,8 @@ website:
         text: Pocilloporid Dispersion
       - href: content/coral_size.qmd
         text: Colony Size
+      - href: content/rpn_sppa2.qmd
+        text: Coral Dispersion II
       - href: content/rpn_sppa.qmd
         text: Coral Dispersion
       - href: content/fuck_this.Rmd
