commit and push, 1551, 4/4/2023

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -61,6 +61,8 @@ website:
         text: Coral Dispersion
       - href: content/soil2.qmd
         text: Soil
+      - href: content/soil3.qmd
+        text: Soil2
 
 format:
   html:
