commit and push, 4/13/2023, 1757

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,6 +63,8 @@ website:
         text: Appendix II
       - href: content/soil2.qmd
         text: Soil
+      - href: content/app2_pdf.qmd
+        text: Supplementary Material II
 
 format:
   html:
