commit and push, 5/12/2023, 0943

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,6 +65,8 @@ website:
         text: Appendix II
       - href: content/bleaching_results_material.qmd
         text: Bleaching Supplemental Material
+      - href: content/research_strategy.qmd
+        text: Research Approach
       - href: content/soil2.qmd
         text: Soil
 
